<resources>
    <plurals name="vote_count">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
    </plurals>
    <plurals name="book_count">
        <item quantity="one">%d book</item>
        <item quantity="other">%d books</item>
    </plurals>
    <plurals name="group_count">
        <item quantity="one">%d group</item>
        <item quantity="other">%d groups</item>
    </plurals>
    <string name="app_name">Lubble</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_post_hint">What\'s new in your locality?</string>
    <string name="new_post_add_photo">Add Photo or Screenshot</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_high">High</string>
    <string name="new_post_priority_label">Priority:</string>
    <string name="new_post_high_priority_info">High Priority posts are shown as notification</string>
    <string name="no_internet_connection">Check Internet Connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_sign_in_response">Unknown response</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="profile_sign_out">Sign out</string>
    <string name="profile_save">Save</string>
    <string name="signup_welcome">Welcome! Please introduce yourself</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="btn_continue">Continue</string>
    <string name="profile_pic_hint">Hi %1$s!\nAdd your photo to let your friends identify you</string>
    <string name="all_skip">skip</string>
    <string name="all_lets_go">Let\'s Go</string>
    <string name="profile">Profile</string>
    <string name="clear_db">Clear DB</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="all_save">Save</string>
    <string name="profile_updating">Updating Profile</string>
    <string name="all_please_wait">Please Wait…</string>
    <string name="progress_uploading">Uploading</string>
    <string name="upload_success">Upload Complete!</string>
    <string name="upload_failure">Upload Failed!</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="edit">Edit</string>
    <string name="title_activity_scrolling_group_info">Group Info</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lubble">LubbleActivity</string>
    <string name="notice_board">Notice Board</string>
    <string name="about_svr">Saraswati Vihar is a residential area in North West Delhi near Pitampura.\n\nIt has been divided into five blocks from A to E.</string>
    <string name="domestic_directory">Domestic Directory</string>
    <string name="update_dialog_title">Please Update App</string>
    <string name="update_dialog_msg">You haven\'t updated Lubble app in a while. Please download the latest update from play store.</string>
    <string name="all_update">UPDATE</string>
    <string name="update_recheck">Re-check</string>
    <string name="new_notice_title">New Notice</string>
    <string name="all_fill_details">Please fill all details</string>
    <string name="intro_page1_title"><![CDATA[The private social network for you & your neighbours]]></string>
    <string name="intro_page1_subtitle">Lubble lets you connect with verified people living in your locality</string>
    <string name="intro_page2_title">Engage with the people around you</string>
    <string name="intro_page2_subtitle">Join interest groups, plan stuff together with your neighbours in your locality</string>
    <string name="intro_page3_title">Stay informed about your locality</string>
    <string name="intro_page3_subtitle">See announcements, alerts and safety tips for your neighbourhood.</string>
    <string name="loc_perm_rationale">We need your location to connect you with people nearby. Without this permission, you cannot use Lubble</string>
    <string name="loc_perm_rationale_quiz">We need your location to find the nearest restaurant/cafe</string>
    <string name="loc_perm_rationale_addr">We need your location so that our delivery executive can easily reach you</string>
    <string name="all_ok">OK</string>
    <string name="storage_perm_denied_text">Please grant permission to download chat photos &amp; media</string>
    <string name="storage_perm_never_text">To enable permissions again, go to app settings of Lubble</string>
    <string name="write_storage_perm_denied_text">Please grant permission to download chat photos &amp; media</string>
    <string name="write_storage_perm_never_text">To download chat photos &amp; media, allow storage permission from app settings of Lubble app</string>
    <string name="select_block">Select Block</string>
    <string name="all_updating">Updating</string>
    <string name="all_try_again">Try Again</string>
    <string name="all_something_wrong_try_again">Something went wrong, please try again</string>
    <string name="joining_group">Joining group</string>
    <string name="pvt_group_msgs_hidden">Messages are hidden in private groups until you join</string>
    <string name="invited_by">Invited by %s</string>
    <string name="ready_to_join">Ready to join</string>
    <string name="join_group_to_chat">Join group to send messages</string>
    <string name="lubble_group_warning_title">Welcome to %s Group</string>
    <string name="lubble_group_warning_subtitle">All your neighbours in %s are a member of this group.\n\n\u26D4 We do not allow any spam/promotions in any group.</string>
    <string name="public_group_warning_title">This is a public group!</string>
    <string name="public_group_warning_subtitle">Messages you send here are visible to everyone.</string>
    <string name="event_published">Event Published</string>
    <string name="invalid_date_time">Invalid date or time</string>
    <string name="name_error">Please enter name</string>
    <string name="desc_error">Please enter description</string>
    <string name="event_organizer_error">Please enter event organizer name</string>
    <string name="event_date_error">Please enter event date</string>
    <string name="event_time_error">Please enter event time</string>
    <string name="event_map_error">Please select place on map</string>
    <string name="event_address_error">Please enter event address</string>
    <string name="now_member">now</string>
    <string name="already_member">already</string>
    <string name="event_going_confirm_title">See you at the event!</string>
    <string name="event_going_confirm_subtitle">You are %s a member of the event\'s group. Chat with neighbours who are also going.</string>
    <string name="event_maybe_confirm_title">Hope to see you there!</string>
    <string name="event_maybe_confirm_subtitle">You are %s a member of the event\'s group. Chat with neighbours who are also interested.</string>
    <string name="event_not_going_confirm_title">Not Going?</string>
    <string name="event_not_going_confirm_subtitle">Are you sure you will not attend the event?</string>
    <string name="event_not_going">Not Going</string>
    <string name="all_cancel">Cancel</string>
    <string name="event_host_leave_title">Hosts cannot leave event</string>
    <string name="event_host_leave_subtitle"><![CDATA[You are hosting this event & cannot change your own status.]]></string>
    <string name="event_time_onwards">onwards</string>
    <string name="event_time_text">%s, %s %s from %s %s</string>
    <string name="event_going_count">%d going</string>
    <string name="event_maybe_count">%s%s</string>
    <string name="event_maybe_suffix">%d maybe</string>
    <string name="event_linked_group_hint">Linked Group: %s</string>
    <string name="muted">Snoozed Notifications</string>
    <string name="unmuted">Un-Snoozed Notifications</string>
    <string name="all_are_you_sure">Are you sure?</string>
    <string name="leave_group_ques">Leave Group?</string>
    <string name="leave_group_desc">You will no longer be a part of this group</string>
    <string name="leave_group_title">Leave Group</string>
    <string name="leaving_group_title">Leaving Group</string>
    <string name="private_group">Private Group</string>
    <string name="public_group">Public Group</string>
    <string name="joing_group_to_invite">Join the group to invite people</string>
    <string name="joing_group_to_share">Join the group to share it</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="invite_pending">Invitation Pending</string>
    <string name="public_group_desc">Visible to everyone. Anyone can join</string>
    <string name="private_group_desc"><![CDATA[Only invited people can join & see messages]]></string>
    <string name="creating_new_group">Creating New Group</string>
    <string name="edit_profile_to_add_bio">Edit Profile to add a bio</string>
    <string name="no_bio_text">This user has no bio :(</string>
    <string name="invite_select_users">Please select people to invite</string>
    <string name="invites_sent">Invites Sent</string>
    <string name="storage_perm_rationale_title">Please allow storage permission</string>
    <string name="storage_perm_rationale_subtitle">Without permission we cannot upload your photos</string>
    <string name="all_allow">Allow</string>
    <string name="all_deny">Deny</string>
    <string name="logging_out">Logging out…</string>
    <string name="past_events">Past Events</string>
    <string name="read_by">Read By</string>
    <string name="msg_info">Message Info</string>
    <string name="liked_by">Liked By</string>
    <string name="action_info">Info</string>
    <string name="action_spam">Spam</string>
    <string name="action_super_like">Super Like</string>
    <string name="action_reply">Reply</string>
    <string name="action_copy">Copy</string>
    <string name="no_likes">No likes till now</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="like_any_msg_hint">Tap &amp; hold any message to like it</string>
    <string name="no_reads">Waiting for someone to read your message</string>
    <string name="no_photo">Please add a photo</string>
    <string name="choose_category">Choose Category</string>
    <string name="item_name">Item Name</string>
    <string name="what_are_you_selling">What are you selling?</string>
    <string name="change_photo">Change Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="no_category">Please choose category</string>
    <string name="please_choose_a_category">Please choose a category</string>
    <string name="category">Category</string>
    <string name="item_review_hint">It takes a few hours to review your item</string>
    <string name="submit_for_approval">Submit for approval</string>
    <string name="selling_price">Selling Price</string>
    <string name="mrp">MRP</string>
    <string name="about_the_item">About the item</string>
    <string name="change_seller_photo">Change Seller Photo</string>
    <string name="seller_name">Seller Name</string>
    <string name="about_seller">About Seller</string>
    <string name="become_a_seller">Become a seller</string>
    <string name="about_seller_hint">Tell buyers about your passions, why you are the perfect individual or business from whom they should purchase</string>
    <string name="selling_price_error">Please enter sale price</string>
    <string name="mrp_error">Please enter original MRP of the item</string>
    <string name="add_new_item">Add New Item</string>
    <string name="edit_seller_profile">Edit Seller Profile</string>
</resources>