<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_spam"
        android:icon="@drawable/ic_warning_24dp"
        android:title="@string/action_spam"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true" />
    <item
        android:id="@+id/action_super_like"
        android:icon="@drawable/ic_big_and_small_hearts"
        android:title="@string/action_super_like"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true" />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/action_info"
        app:showAsAction="always"
        tools:visible="true" />

    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_reply_black_24dp"
        android:title="@string/action_reply"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/action_copy"
        app:showAsAction="always" />
</menu>