<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="in.lubble.app.marketplace.SellerEditActiv">

    <include
        android:id="@+id/text_toolbar"
        layout="@layout/text_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_seller_pic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/text_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/ic_account_circle_black_no_padding" />

    <TextView
        android:id="@+id/tv_change_pic_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_seller_pic"
        android:layout_centerHorizontal="true"
        android:text="@string/change_seller_photo"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_seller_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_change_pic_hint"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/seller_name">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_seller_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_seller_name"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/about_seller">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|start"
            android:inputType="textMultiLine"
            android:lines="5" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_seller_about"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/about_seller_hint"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/become_a_seller"
        android:theme="@style/AccentButton" />

</RelativeLayout>
