<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.lubble.app.chat.chat_info.MsgInfoActivity"
    tools:showIn="@layout/activity_msg_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/liked_by"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/linear_layout_no_likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/default_text_color"
                app:srcCompat="@drawable/ic_broken_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/no_likes" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_liked_msg_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:nestedScrollingEnabled="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <TextView
            android:id="@+id/tv_read_by_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/read_by"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/linear_layout_no_reads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/default_text_color"
                app:srcCompat="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:maxLines="1"
                android:text="@string/no_reads" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_msg_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:nestedScrollingEnabled="false"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
